--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -25,7 +25,13 @@
   <property name="styleSheet">
    <string notr="true">color: white;
 font-size: 24px;
-</string>
+QPushButton {
+        border-radius: 10px;
+        background-color: #FFF;
+        color: black;
+        font-size: 16px;
+        border: none;
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="enabled">
@@ -42,7 +48,15 @@ font-size: 24px;
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: #F79643;
-font-family: &quot;CoconPro&quot;;</string>
+font-family: &quot;CoconPro&quot;;
+
+QPushButton {
+	border-radius: 10px;
+	background-color : #FFF;
+	color: black;
+	font-size: 16px;
+     border: none;
+}</string>
    </property>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
@@ -75,7 +89,7 @@ font-family: &quot;CoconPro&quot;;</string>
      <enum>QFrame::Plain</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="LandingPage" name="landingPage">
      <property name="minimumSize">
@@ -176,7 +190,7 @@ font-family: &quot;CoconPro&quot;;</string>
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="mainPage">
+    <widget class="MainPage" name="mainPage">
      <property name="minimumSize">
       <size>
        <width>800</width>
@@ -230,7 +244,7 @@ font-family: &quot;CoconPro&quot;;</string>
         </rect>
        </property>
        <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
+        <enum>QFrame::NoFrame</enum>
        </property>
        <widget class="QWidget" name="cocktailPage1">
         <widget class="QWidget" name="layoutWidget">
@@ -242,7 +256,7 @@ font-family: &quot;CoconPro&quot;;</string>
            <height>321</height>
           </rect>
          </property>
-         <layout class="QGridLayout" name="gridLayout">
+         <layout class="QGridLayout" name="gridCocktailLayout">
           <item row="0" column="0">
            <widget class="QFrame" name="frame_3">
             <property name="sizePolicy">
@@ -384,7 +398,7 @@ font-family: &quot;CoconPro&quot;;</string>
            </widget>
           </item>
           <item row="0" column="2">
-           <widget class="QFrame" name="frame_8">
+           <widget class="CocktailCard" name="cocktailCard">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -406,7 +420,6 @@ font-family: &quot;CoconPro&quot;;</string>
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -415,7 +428,7 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
-            <widget class="QLabel" name="label_7">
+            <widget class="QLabel" name="cocktailCardName">
              <property name="enabled">
               <bool>true</bool>
              </property>
@@ -444,20 +457,7 @@ font-size: 16px;</string>
               <set>Qt::AlignCenter</set>
              </property>
             </widget>
-            <widget class="QLabel" name="label_8">
-             <property name="geometry">
-              <rect>
-               <x>30</x>
-               <y>40</y>
-               <width>61</width>
-               <height>51</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-            <widget class="QLabel" name="label_9">
+            <widget class="QLabel" name="cocktailCardImage">
              <property name="enabled">
               <bool>true</bool>
              </property>
@@ -499,7 +499,7 @@ font-size: 16px;</string>
        </widget>
        <widget class="QWidget" name="cocktailPage2"/>
       </widget>
-      <widget class="QPushButton" name="leftButton">
+      <widget class="QPushButton" name="leftButtonMainPage">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -532,7 +532,7 @@ font-size: 16px;</string>
         </size>
        </property>
       </widget>
-      <widget class="QPushButton" name="rightButton">
+      <widget class="QPushButton" name="rightButtonMainPage">
        <property name="geometry">
         <rect>
          <x>540</x>
@@ -745,7 +745,7 @@ glaçon</string>
        <string>Mojito</string>
       </property>
      </widget>
-     <widget class="QToolButton" name="toolButton">
+     <widget class="QToolButton" name="toolButtonMainPage">
       <property name="geometry">
        <rect>
         <x>770</x>
@@ -824,7 +824,7 @@ font-size: 12px;</string>
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="parameterPage">
+    <widget class="ParameterPage" name="parameterPage">
      <property name="minimumSize">
       <size>
        <width>800</width>
@@ -929,7 +929,6 @@ font-size: 12px;</string>
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -963,7 +962,6 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -997,7 +995,6 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -1031,7 +1028,6 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -1143,7 +1139,6 @@ color: black;</string>
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -1177,7 +1172,6 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -1211,7 +1205,6 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -1245,7 +1238,6 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
             <property name="styleSheet">
              <string notr="true">background-color: #FFFFFF; /* Couleur de fond blanc */
 border-radius: 15px; /* Bords arrondis de 5px */
-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
 </string>
             </property>
             <property name="frameShape">
@@ -1266,7 +1258,7 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
        </widget>
       </widget>
      </widget>
-     <widget class="QFrame" name="frame">
+     <widget class="QFrame" name="parameterRightPannel">
       <property name="geometry">
        <rect>
         <x>570</x>
@@ -1277,7 +1269,6 @@ box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4); /* Ombre portée */
       </property>
       <property name="styleSheet">
        <string notr="true">background-color : #F9F8F8;
-
 </string>
       </property>
       <property name="frameShape">
@@ -1309,7 +1300,7 @@ color: black;</string>
         <string>Paramètres</string>
        </property>
       </widget>
-      <widget class="QToolButton" name="toolButtonParameter">
+      <widget class="QToolButton" name="toolButtonParameterPage">
        <property name="geometry">
         <rect>
          <x>200</x>
@@ -1336,129 +1327,159 @@ color: black;</string>
         </size>
        </property>
       </widget>
-      <widget class="QRadioButton" name="radioButton">
+      <widget class="QWidget" name="verticalLayoutWidget">
        <property name="geometry">
         <rect>
-         <x>40</x>
-         <y>120</y>
-         <width>151</width>
-         <height>61</height>
+         <x>30</x>
+         <y>110</y>
+         <width>184</width>
+         <height>251</height>
         </rect>
        </property>
-       <property name="font">
-        <font>
-         <family>CoconPro</family>
-         <pointsize>-1</pointsize>
-         <strikeout>false</strikeout>
-        </font>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	border-radius: 10px;
-	background-color : #FFF;
-	color: black;
-	font-size: 16px;
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QPushButton" name="pushButtonBottleParameter">
+          <property name="font">
+           <font>
+            <family>CoconPro</family>
+            <pointsize>-1</pointsize>
+            <strikeout>false</strikeout>
+           </font>
+          </property>
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QPushButton {
+        border-radius: 10px;
+        background-color: #FFF;
+        color: black;
+        font-size: 16px;
+        border: none;
+	   text-align: left;
+	   padding-left: 15px;
 }
-</string>
-       </property>
-       <property name="text">
-        <string>Bouteilles</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>ressources/generic/bouteille.png</normaloff>ressources/generic/bouteille.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>16</width>
-         <height>40</height>
-        </size>
-       </property>
-       <property name="checkable">
-        <bool>false</bool>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_2">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>200</y>
-         <width>151</width>
-         <height>61</height>
-        </rect>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	border-radius: 10px;
-	background-color : #FFF;
-	color: black;
-	font-size: 16px;
+
+QPushButton:pressed {
+        background-color: #333; 
+}</string>
+          </property>
+          <property name="text">
+           <string>     Bouteilles</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>ressources/generic/bouteille.png</normaloff>ressources/generic/bouteille.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>16</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="autoExclusive">
+           <bool>true</bool>
+          </property>
+          <property name="default">
+           <bool>true</bool>
+          </property>
+          <property name="flat">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonSoftParameter">
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QPushButton {
+        border-radius: 10px;
+        background-color: #FFF;
+        color: black;
+        font-size: 16px;
+        border: none;
+	   text-align: left;
+	   padding-left: 10px;
 }
-</string>
-       </property>
-       <property name="text">
-        <string>Soft</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>ressources/generic/soft.png</normaloff>ressources/generic/soft.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>40</width>
-         <height>40</height>
-        </size>
-       </property>
-       <property name="checkable">
-        <bool>false</bool>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_3">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>280</y>
-         <width>151</width>
-         <height>61</height>
-        </rect>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-       <property name="autoFillBackground">
-        <bool>false</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	border-radius: 10px;
-	background-color : #FFF;
-	color: black;
-	font-size: 16px;
+
+QPushButton:pressed {
+        background-color: #333; 
+}</string>
+          </property>
+          <property name="text">
+           <string>   Soft</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>ressources/generic/soft.png</normaloff>ressources/generic/soft.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>40</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="autoExclusive">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonMachineParameter">
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QPushButton {
+        border-radius: 10px;
+        background-color: #FFF;
+        color: black;
+        font-size: 16px;
+        border: none;
+	   text-align: left;
+	   padding-left: 0px;
 }
-</string>
-       </property>
-       <property name="text">
-        <string>Machine</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>ressources/generic/outil.png</normaloff>ressources/generic/outil.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>50</width>
-         <height>50</height>
-        </size>
-       </property>
-       <property name="checkable">
-        <bool>false</bool>
-       </property>
+
+QPushButton:pressed {
+        background-color: #333; 
+}</string>
+          </property>
+          <property name="text">
+           <string>  Machine</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>ressources/generic/outil.png</normaloff>ressources/generic/outil.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>40</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="autoExclusive">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </widget>
@@ -1486,6 +1507,24 @@ color: black;</string>
    <class>LandingPage</class>
    <extends>QWidget</extends>
    <header location="global">pompetteWidgets</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MainPage</class>
+   <extends>QWidget</extends>
+   <header location="global">pompetteWidgets</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ParameterPage</class>
+   <extends>QWidget</extends>
+   <header location="global">pompetteWidgets</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>CocktailCard</class>
+   <extends>QFrame</extends>
+   <header>pompetteWidgets</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
