--- a/RaspberryPi/GUI/bottleDialog.ui
+++ b/RaspberryPi/GUI/bottleDialog.ui
@@ -217,6 +217,9 @@ QSpinBox::down-arrow {
 }
 </string>
    </property>
+   <property name="frame">
+    <bool>false</bool>
+   </property>
    <property name="maximum">
     <number>1000</number>
    </property>
