--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -3262,15 +3262,14 @@ bar man</string>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">border: none; /* Supprime la bordure */
-</string>
+        <string notr="true">border: none; /* Supprime la bordure */</string>
        </property>
        <property name="text">
         <string>...</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>ressources/generic/engrenage_orange.png</normaloff>ressources/generic/engrenage_orange.png</iconset>
+         <normaloff>ressources/generic/home.svg</normaloff>ressources/generic/home.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -3381,9 +3380,9 @@ color: black;</string>
       <widget class="QPushButton" name="barmanCreateButton">
        <property name="geometry">
         <rect>
-         <x>80</x>
+         <x>30</x>
          <y>410</y>
-         <width>71</width>
+         <width>81</width>
          <height>31</height>
         </rect>
        </property>
@@ -3401,33 +3400,55 @@ QPushButton:pressed {
 </string>
        </property>
        <property name="text">
-        <string>Créer</string>
+        <string>Dans le bar !</string>
        </property>
       </widget>
-      <widget class="QLabel" name="barmanCocktailName">
+      <widget class="QPushButton" name="barmanDeleteButton">
        <property name="geometry">
         <rect>
-         <x>40</x>
-         <y>350</y>
-         <width>161</width>
-         <height>61</height>
+         <x>120</x>
+         <y>410</y>
+         <width>81</width>
+         <height>31</height>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">font-size: 16px;
-color: black;</string>
+        <string notr="true">QPushButton {
+    color: white;
+    font-size: 12px;
+    background-color: #F79643;
+    border-radius: 5px;
+}
+
+QPushButton:pressed {
+    background-color: #f0f0f0; /* Gris clair lorsqu'appuyé */
+}
+</string>
+       </property>
+       <property name="text">
+        <string>Supprimer</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="barmanNameButton">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>340</y>
+         <width>191</width>
+         <height>61</height>
+        </rect>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color : transparent;
+font-size: 16px;
+color: black;
+border : None</string>
        </property>
        <property name="text">
         <string>Cocktail Perso</string>
-       </property>
-       <property name="scaledContents">
-        <bool>false</bool>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <property name="wordWrap">
-        <bool>true</bool>
        </property>
       </widget>
      </widget>
@@ -3513,7 +3534,7 @@ background-color: transparent;</string>
          <string>Oui</string>
         </property>
        </widget>
-       <widget class="QSlider" name="horizontalSlider">
+       <widget class="QSlider" name="iceSlider">
         <property name="geometry">
          <rect>
           <x>35</x>
@@ -3605,7 +3626,7 @@ background-color: transparent;</string>
          <string>Oui</string>
         </property>
        </widget>
-       <widget class="QSlider" name="horizontalSlider_3">
+       <widget class="QSlider" name="lemonSlider">
         <property name="geometry">
          <rect>
           <x>35</x>
