--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -89,7 +89,7 @@ QPushButton {
      <enum>QFrame::Plain</enum>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="LandingPage" name="landingPage">
      <property name="minimumSize">
@@ -842,7 +842,7 @@ QPushButton:pressed {
         <x>600</x>
         <y>420</y>
         <width>171</width>
-        <height>21</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -920,13 +920,14 @@ QPushButton:pressed {
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">border-radius: 15px; /* Bords arrondis de 5px */</string>
+        <string notr="true">border-radius: 15px; /* Bords arrondis de 5px */
+</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="glassBottles">
         <property name="font">
@@ -937,7 +938,7 @@ QPushButton:pressed {
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color : #F9F8F8;</string>
+         <string notr="true">background-color : #F0F0F0;</string>
         </property>
         <widget class="QWidget" name="layoutWidget2">
          <property name="geometry">
@@ -1309,7 +1310,7 @@ border-radius: 15px; /* Bords arrondis de 5px */
        </widget>
        <widget class="QWidget" name="plasticBottles">
         <property name="styleSheet">
-         <string notr="true">background-color : #F9F8F8;</string>
+         <string notr="true">background-color : #F0F0F0;</string>
         </property>
         <widget class="QWidget" name="layoutWidget2_2">
          <property name="geometry">
@@ -1549,7 +1550,7 @@ border-radius: 15px; /* Bords arrondis de 5px */
        </widget>
        <widget class="QWidget" name="machineParameter">
         <property name="styleSheet">
-         <string notr="true">background-color : #F9F8F8;</string>
+         <string notr="true">background-color : #F0F0F0;</string>
         </property>
         <widget class="QStackedWidget" name="machineParameterStack">
          <property name="geometry">
@@ -2969,6 +2970,74 @@ color: black;</string>
          </property>
         </widget>
        </widget>
+       <widget class="QWidget" name="settings">
+        <property name="styleSheet">
+         <string notr="true">background-color : #F0F0F0;</string>
+        </property>
+        <widget class="QSlider" name="brightnessSlider">
+         <property name="geometry">
+          <rect>
+           <x>160</x>
+           <y>110</y>
+           <width>111</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="maximum">
+          <number>255</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_21">
+         <property name="geometry">
+          <rect>
+           <x>160</x>
+           <y>50</y>
+           <width>121</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: black;
+font-size: 16px;</string>
+         </property>
+         <property name="text">
+          <string>Luminosité</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="powerButton">
+         <property name="geometry">
+          <rect>
+           <x>200</x>
+           <y>200</y>
+           <width>50</width>
+           <height>50</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: white;
+border-radius: 25px;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>ressources/generic/power.png</normaloff>ressources/generic/power.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>30</width>
+           <height>30</height>
+          </size>
+         </property>
+        </widget>
+       </widget>
       </widget>
      </widget>
      <widget class="QFrame" name="parameterRightPannel">
@@ -2981,7 +3050,7 @@ color: black;</string>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color : #F9F8F8;
+       <string notr="true">background-color : #F0F0F0;
 </string>
       </property>
       <property name="frameShape">
@@ -2993,9 +3062,9 @@ color: black;</string>
       <widget class="QLabel" name="titleParameter">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>10</x>
          <y>20</y>
-         <width>171</width>
+         <width>211</width>
          <height>31</height>
         </rect>
        </property>
@@ -3011,6 +3080,9 @@ color: black;</string>
        </property>
        <property name="text">
         <string>Paramètres</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
       <widget class="QToolButton" name="toolButtonParameterPage">
@@ -3031,7 +3103,7 @@ color: black;</string>
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>ressources/generic/engrenage_orange.png</normaloff>ressources/generic/engrenage_orange.png</iconset>
+         <normaloff>ressources/generic/home.svg</normaloff>ressources/generic/home.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -3052,6 +3124,18 @@ color: black;</string>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QPushButton" name="pushButtonBottleParameter">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
           <property name="font">
            <font>
             <family>CoconPro</family>
@@ -3077,7 +3161,7 @@ color: black;</string>
 }
 
 QPushButton:checked {
-    background-color: #EAEAEA; /* Fond gris clair pour les boutons enfoncés */
+    background-color: #D8D8D8; /* Fond gris clair pour les boutons enfoncés */
 }</string>
           </property>
           <property name="text">
@@ -3112,6 +3196,18 @@ QPushButton:checked {
         </item>
         <item>
          <widget class="QPushButton" name="pushButtonSoftParameter">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
           <property name="layoutDirection">
            <enum>Qt::LeftToRight</enum>
           </property>
@@ -3127,7 +3223,7 @@ QPushButton:checked {
 }
 
 QPushButton:checked {
-    background-color: #EAEAEA; /* Fond gris clair pour les boutons enfoncés */
+    background-color: #D8D8D8; /* Fond gris clair pour les boutons enfoncés */
 }</string>
           </property>
           <property name="text">
@@ -3153,6 +3249,18 @@ QPushButton:checked {
         </item>
         <item>
          <widget class="QPushButton" name="pushButtonMachineParameter">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
           <property name="layoutDirection">
            <enum>Qt::LeftToRight</enum>
           </property>
@@ -3171,7 +3279,7 @@ QPushButton:checked {
 }
 
 QPushButton:checked {
-    background-color: #EAEAEA; /* Fond gris clair pour les boutons enfoncés */
+    background-color: #D8D8D8; /* Fond gris clair pour les boutons enfoncés */
 }</string>
           </property>
           <property name="text">
@@ -3189,6 +3297,65 @@ QPushButton:checked {
           </property>
           <property name="checkable">
            <bool>true</bool>
+          </property>
+          <property name="autoExclusive">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButtonMachineSettings">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QPushButton {
+        border-radius: 10px;
+        background-color: #FFF;
+        color: black;
+        font-size: 16px;
+        border: none;
+	   text-align: left;
+	   padding-left: 10px;
+}
+
+QPushButton:checked {
+    background-color: #D8D8D8; /* Fond gris clair pour les boutons enfoncés */
+}</string>
+          </property>
+          <property name="text">
+           <string>    Paramètres</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>ressources/generic/engrenage_orange.png</normaloff>ressources/generic/engrenage_orange.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>40</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
           </property>
           <property name="autoExclusive">
            <bool>true</bool>
@@ -3246,7 +3413,7 @@ color: black;</string>
        </property>
        <property name="text">
         <string>Mode
-bar man</string>
+barman</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -3462,7 +3629,7 @@ border : None</string>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color : #F9F8F8;
+       <string notr="true">background-color : #F0F0F0;
 border-radius: 15px;</string>
       </property>
       <property name="frameShape">
