--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -2985,7 +2985,7 @@ color: black;</string>
          </property>
          <property name="styleSheet">
           <string notr="true">QSlider::handle:horizontal {
-    background-color: transparent;
+    background-color: white;
     background-image: url('ressources/generic/engrenage_orange.png');
 }
 
