--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -2980,21 +2980,22 @@ color: black;</string>
            <x>160</x>
            <y>110</y>
            <width>111</width>
-           <height>25</height>
+           <height>31</height>
           </rect>
          </property>
          <property name="styleSheet">
           <string notr="true">QSlider::handle:horizontal {
     background-color: white;
-    background-image: url('ressources/generic/engrenage_orange.png');
+	border: 1px solid #D8D8D8; /* Couleur de bordure, ajustez selon besoin */
+	border-radius: 15px; /* Rend le bouton rond */
 }
 
 QSlider::handle:vertical {
     background: #5c5c5c; /* Couleur de fond du bouton */
-    border: 1px solid #5c5c5c; /* Couleur de bordure, ajustez selon besoin */
+    
     height: 30px; /* Hauteur du bouton pour slider vertical */
     margin: 0 -10px; /* Extension au-delà du groove, ajustez selon besoin */
-    border-radius: 15px; /* Rend le bouton rond */
+
 }
 </string>
          </property>
