--- a/RaspberryPi/GUI/ingredientCardDialog.ui
+++ b/RaspberryPi/GUI/ingredientCardDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>443</width>
-    <height>93</height>
+    <width>450</width>
+    <height>144</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,14 +42,14 @@ border-radius: 15px;</string>
      <x>30</x>
      <y>50</y>
      <width>141</width>
-     <height>30</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QComboBox {
     background-color: #F9F8F8; /* Fond gris clair */
     color: #000000; /* Texte noir */
-    font-size: 12px; /* Taille de la police 12 */
+    font-size: 16px; /* Taille de la police 12 */
     border: 1px solid #707070; /* Bordure de 1px en noir */
     border-radius: 3px; /* Coins arrondis de 2px */
     padding: 2px; /* Espacement interne */
@@ -96,14 +96,14 @@ border-radius: 15px;</string>
      <x>190</x>
      <y>50</y>
      <width>121</width>
-     <height>30</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QSpinBox {
     background-color: #F9F8F8; /* Fond gris clair */
     color: #000000; /* Texte noir */
-    font-size: 12px; /* Taille de la police 12 */
+    font-size: 20px; /* Taille de la police 12 */
     border: 1px solid #707070; /* Bordure de 1px en noir */
     border-radius: 3px; /* Coins arrondis de 3px */
     padding: 2px; /* Espacement interne */
@@ -135,6 +135,10 @@ QSpinBox::down-arrow {
     image: url(./ressources/generic/arrow_down.svg); /* Chemin relatif vers votre icône SVG */
     color: #000000; /* Couleur des flèches en noir */
 }
+
+QSpinBox::edit-focus {
+    color: black;
+}
 </string>
    </property>
    <property name="frame">
@@ -157,7 +161,7 @@ QSpinBox::down-arrow {
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>10</y>
+     <y>40</y>
      <width>91</width>
      <height>71</height>
     </rect>
