--- a/RaspberryPi/GUI/ingredientCardDialog.ui
+++ b/RaspberryPi/GUI/ingredientCardDialog.ui
@@ -16,7 +16,8 @@
   <property name="styleSheet">
    <string notr="true">font-family: &quot;CoconPro&quot;;
 background-color: #F9F8F8;
-border-radius: 15px;</string>
+border-radius: 15px;
+color: black; /* Définit la couleur du texte à noir */</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
@@ -117,16 +118,19 @@ QSpinBox::up-button, QSpinBox::down-button {
     width: 20px; /* Largeur des boutons */
     border: 0px solid #707070; /* Bordure des boutons en noir */
 	margin: 0px; /* Marge des boutons */
+    color: black; /* Définit la couleur du texte à noir */
 }
 
 QSpinBox::up-button {
     subcontrol-origin: padding;
     subcontrol-position: top right;
+    color: black; /* Définit la couleur du texte à noir */
 }
 
 QSpinBox::down-button {
     subcontrol-origin: padding;
     subcontrol-position: bottom right;
+    color: black; /* Définit la couleur du texte à noir */
 }
 
 QSpinBox::up-arrow{
@@ -136,12 +140,7 @@ QSpinBox::up-arrow{
 QSpinBox::down-arrow {
     image: url(./ressources/generic/arrow_down.svg); /* Chemin relatif vers votre icône SVG */
     color: #000000; /* Couleur des flèches en noir */
-}
-
-QSpinBox, QSpinBox::up-button, QSpinBox::down-button, QSpinBox QLineEdit {
-    color: black; /* Définit la couleur du texte à noir */
-}
-</string>
+}</string>
    </property>
    <property name="frame">
     <bool>false</bool>
